--- a/contato.html
+++ b/contato.html
@@ -18,38 +18,32 @@
                 </tr>
             </nav>
         </header>
-        <main align="left">
+        <pre>
+
+
+
+
+
+
+        </pre>
+        <main align="center">
             <section>
-              <h2>Minha Trajetória</h2> 
-                <ol start="2021">
-                    <li>> Jovem Aprendiz</li>
-                    <li>> Jovem Aprenziz</li>
-                    <li>> Empacotador</li>
-                    <li>> Servente de Pedreiro e Auxiliar de Pintor</li>
-                    <li>> Servente de Pedreiro e Auxiliar de Pintor</li> 
-                </ol>
-                <p>CURSOS</p>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>2022</th>
-                            <th>| 2024</th>
-                            <th>| 2025</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Desenvolvimento de Aplicações Web - 1 ano</td>
-                            <td>| Montagem e Manutenção de Computadores</td>
-                            <td>| Sistemas de Informação - Em Andamento</td>
-                        </tr>
-                        <tr>
-                            <td>Bacharelado em Estatistica - Incompleto</td>
-                            <td>| </td>
-                            <td>| </td>
-                        </tr>
-                    </tbody>
-                </table>
+                <p>Entrar em Contato:</p>
+                <form>
+                    <input type="text" placeholder="nome" maxlength="100"><br><br>
+                    <input type="email" placeholder="email" required minlength="5" maxlength="50"><br><br>
+                    <input type="tel" placeholder="telefone" required minlength="10" maxlength="15"><br><br>
+                    <label for="Assunto: "></label>
+                    <select>
+                        <option value="">Entrevista</option>
+                        <option value="">Freelancer</option>
+                    </select>
+                    <br><br>
+                    <p>Digite o assunto abaixo:</p>
+                    <textarea></textarea>
+                    <br>
+                    <input type="submit" value="Enviar">
+                </form>
             </section>
         </main>
         <pre>
@@ -95,7 +89,7 @@
                     <td>(xx) xxxx-xxxx | </td>
                     <td>joaoalexandresmg3@gmail.com | </td>
                     <td>github.com/xandsmg </td>
-                    <td><a href="sobre.html"> Voltar para cima</a></td>
+                    <td><a href="contato.html"> Voltar para cima</a></td>
                 </tr>
             </table>
         </footer>
