--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <td>(xx) xxxx-xxxx | </td>
                     <td>joaoalexandresmg3@gmail.com | </td>
                     <td>github.com/xandsmg </td>
-                    <td><a href="sobre.html"> Voltar para cima</a></td>
+                    <td><a href="index.html"> Voltar para cima</a></td>
                 </tr>
             </table>
         </footer>
