look at me again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div align="center">
         <header>
             <h1>João Alexandre</h1>
+            <!-- Navbar com os links para as páginas -->
             <nav>
                 <tr>
                     <th><a href="index.html" >HOME</a> | </th>
@@ -25,12 +26,14 @@
                     <img src="./img/eu.jpg" alt="joão alexandre" width="200"></img>
                 </figure>
                 <br><br>
+                <!-- Minha descrição -->
                 <div align="left">
                     <p>Olá, Meu nome é João Alexandre, gosto de tecnologia, principalmente da área de Desenvolvimento Web, no qual pretendo seguir carreira.</p>
                     <p>Estou no primeiro periodo da faculdade de sistemas de informação pelo FATEPI/FAESPI</p>
                 </div>
                 <br>
                 <div align="left">
+                    <!-- Minhas habilidades -->
                     <h3>Minhas habilidades:</h3>   
                         <p>FRONT-END</p>
                         <table>
