there it goes again

--- a/projetos.html
+++ b/projetos.html
@@ -18,6 +18,55 @@
                 </tr>
             </nav>
         </header>
+        <main>
+            </section>
+            <pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </pre>
+        </main>
+        <footer>
+            <table>
+                <tr align="left">
+                    <th>Telefone </th>
+                    <th>Email </th>
+                    <th>Github </th>
+                </tr>
+                <tr>
+                    <td>(xx) xxxx-xxxx | </td>
+                    <td>joaoalexandresmg3@gmail.com | </td>
+                    <td>github.com/xandsmg </td>
+                    <td><a href="projetos.html"> Voltar para cima</a></td>
+                </tr>
+            </table>
+        </footer>
     </div>
 </body>
 </html>
