there it goes again bro

--- a/projetos.html
+++ b/projetos.html
@@ -6,7 +6,7 @@
     <title>Projetos</title>
 </head>
 <body>
-    <div>
+    <div align="center">
         <header>
             <h1>João Alexandre</h1>
             <nav>
@@ -18,8 +18,57 @@
                 </tr>
             </nav>
         </header>
-        <main>
+        <main align="left">
             </section>
+            <!-- projeto 1 -->
+                <article>
+                    <h2>API simples de gerenciamento de usúarios</h2>
+                    <p>Cada registro de usuário conterá um nome, sobrenome e identificador numérico exclusivo que será usado para gerenciar cada um dos usuários individualmente.</p>
+                    <h3>Responsabilidades:</h3>
+                    <ul>
+                        <li>Lógica de négocio</li>
+                        <li>linguagem e framework</li>
+                    </ul>
+                    <a href="https://github.com/xandsmg/Api-simples-de-gerenciamento-de-usuarios" target="_blank">acessar repositório <img src="./img/github.png" alt="github" width="25"></a>
+                    <ul >
+                        <li><figure><img src="./img/projeto1-imagem1.jpg" alt="api" width="300"><figcaption>API</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto1-imagem2.jpg" alt="api" width="300"><figcaption>API</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto1-imagem3.jpg" alt="api" width="300"><figcaption>API</figcaption></figure></li>
+                    </ul>
+                </article>
+            <!-- projeto 2 -->
+                <article>
+                    <h2>Página estática com bootstrap</h2>
+                    <p>Blog criado com boostrap, </p>
+                    <h3>Responsabilidades:</h3>
+                    <ul>
+                        <li>Design da página</li>
+                        <li>Conteúdo do site</li>
+                        <li>framework</li>
+                    </ul>
+                    <a href="https://github.com/xandsmg/Technology-blog-project-with-HTML-CSS-Bootstrap" target="_blank">acessar repositório <img src="./img/github.png" alt="github" width="25"></a>
+                    <ul>
+                        <li><figure><img src="./img/projeto2-imagem1.jpg" alt="blog" width="300"><figcaption>Blog</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto2-imagem2.jpg" alt="blog" width="300"><figcaption>Blog</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto2-imagem3.jpg" alt="blog" width="300"><figcaption>Blog</figcaption></figure></li>
+                    </ul>
+                </article>
+            <!-- projeto 3 -->
+                <article>
+                    <h2>Portifólio com apenas html</h2>
+                    <p>O Portifólio mostrar os projetos pessoais, contato, sobre a pessoa, por exemplo, habilidades ou carreira.</p>
+                    <h3>Responsabilidades:</h3>
+                    <ul>
+                        <li>Design da página</li>
+                        <li>Conteúdo do site</li>
+                    </ul>
+                    <a href="https://github.com/xandsmg/Portifolio-com-apenas-html" target="_blank">acessar repositório <img src="./img/github.png" alt="github" width="25"></a>
+                    <ul>
+                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
+                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
+                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
+                    </ul>
+                </article>
             <pre>
 
 
