--- a/sobre.html
+++ b/sobre.html
@@ -52,6 +52,11 @@
                     </tbody>
                 </table>
             </section>
+            <br><br>
+            <!-- curiosidades ou hobbies -->
+            <aside>
+                <h3>Curiosidades e Hobbies</h3>
+            </aside>
         </main>
         <pre>
 
