--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <nav>
                 <tr>
                     <th><a href="index.html" >HOME</a> | </th>
-                    <th><a href="projetos.html" target="_blank">PROJETOS</a> |</th>
                     <th><a href="sobre.html" target="_blank">SOBRE</a> | </th>
+                    <th><a href="projetos.html" target="_blank">PROJETOS</a> |</th>
                     <th><a href="contato.html" target="_blank">CONTATO</a></th>
                 </tr>
             </nav>
@@ -27,34 +27,34 @@
                 </figure>
                 <br><br>
                 <!-- Minha descrição -->
-                <div align="left">
+                <div>
                     <p>Olá, Meu nome é João Alexandre, gosto de tecnologia, principalmente da área de Desenvolvimento Web, no qual pretendo seguir carreira.</p>
                     <p>Estou no primeiro periodo da faculdade de sistemas de informação pelo FATEPI/FAESPI</p>
                 </div>
                 <br>
-                <div align="left">
+                <div>
                     <!-- Minhas habilidades -->
                     <h3>Minhas habilidades:</h3>   
                         <p>FRONT-END</p>
                         <table>
                             <tr>
                                 <th>
-                                    <img src="./img/html.png" alt="html" width="40">
+                                    <img src="./img/html.png" alt="html" width="50">
                                         <figcaption>html</figcaption>
                                     </img>
                                 </th>
                                 <th>
-                                    <img src="./img/css.png" alt="css" width="40">
+                                    <img src="./img/css.png" alt="css" width="50">
                                         <figcaption>css</figcaption>
                                     </img>
                                 </th>
                                 <th>
-                                    <img src="./img/js.png" alt="javascript" width="40">
+                                    <img src="./img/js.png" alt="javascript" width="50">
                                         <figcaption>javascript</figcaption>
                                     </img>
                                 </th>
                                 <th>
-                                    <img src="./img/bootstrap.png" alt="boostrap" width="40">
+                                    <img src="./img/bootstrap.png" alt="boostrap" width="50">
                                         <figcaption>boostrap</figcaption>
                                     </img>
                                 </th>
@@ -64,12 +64,12 @@
                         <table>
                             <tr>
                                 <th>
-                                    <img src="./img/node-js.png" alt="nodeJS" width="40">
+                                    <img src="./img/node-js.png" alt="nodeJS" width="50">
                                         <figcaption>node</figcaption>
                                     </img>
                                 </th>
                                 <th>
-                                    <img src="./img/express-js.png" alt="expressJS" width="40">
+                                    <img src="./img/express-js.png" alt="expressJS" width="50">
                                         <figcaption>expressJS</figcaption>
                                     </img>
                                 </th>
@@ -79,7 +79,7 @@
                         <table>
                             <tr>
                                 <th>
-                                    <img src="./img/mysql.png" alt="mySQL" width="40">
+                                    <img src="./img/mysql.png" alt="mySQL" width="50">
                                         <figcaption>mySQL</figcaption>
                                     </img>
                                 </th>
@@ -87,12 +87,11 @@
                         </table>
                 </div>
             </section>
+            <figure>
+                <img src="./img/sitemap.png" alt="">
+            </figure>
             <pre>
-
-
-
-
-
+            
 
 
 
@@ -121,7 +120,7 @@
         </main>
          <footer>
             <table>
-                <tr align="left">
+                <tr>
                     <th>Telefone </th>
                     <th>Email </th>
                     <th>Github </th>
