--- a/projetos.html
+++ b/projetos.html
@@ -12,8 +12,8 @@
             <nav>
                 <tr>
                     <th><a href="index.html" target="_blank">HOME</a></th>
-                    <th><a href="projetos.html">PROJETOS</a></th>
                     <th><a href="sobre.html" target="_blank">SOBRE</a></th>
+                    <th><a href="projetos.html">PROJETOS</a></th>
                     <th><a href="contato.html" target="_blank">CONTATO</a></th>
                 </tr>
             </nav>
@@ -64,9 +64,9 @@
                     </ul>
                     <a href="https://github.com/xandsmg/Portifolio-com-apenas-html" target="_blank">acessar repositório <img src="./img/github.png" alt="github" width="25"></a>
                     <ul>
-                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
-                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
-                        <li><figure><img src="" alt=""><figcaption></figcaption></figure></li>
+                        <li><figure><img src="./img/projeto3-imagem2.jpg" alt="html"><figcaption>Portifolio</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto3-imagem2.jpg" alt="html"><figcaption>Portifolio</figcaption></figure></li>
+                        <li><figure><img src="./img/projeto3-imagem2.jpg" alt="html"><figcaption>Portifolio</figcaption></figure></li>
                     </ul>
                 </article>
             <pre>
