--- a/sobre.html
+++ b/sobre.html
@@ -7,27 +7,29 @@
 </head>
 <body>
     <div align="center">
+        <!-- Cabeçalho -->
         <header>
             <h1>João Alexandre</h1>
             <nav>
                 <tr>
                     <th><a href="index.html" >HOME</a> | </th>
-                    <th><a href="projetos.html" target="_blank">PROJETOS</a> |</th>
                     <th><a href="sobre.html" target="_blank">SOBRE</a> | </th>
+                    <th><a href="projetos.html" target="_blank">PROJETOS</a> |</th>
                     <th><a href="contato.html" target="_blank">CONTATO</a></th>
                 </tr>
             </nav>
         </header>
         <br><br>
         <main align="left">
+            <!-- Seção -->
             <section>
               <h2>Minha Trajetória</h2> 
                 <ol start="2021">
                     <li>> Jovem Aprendiz</li>
                     <li>> Jovem Aprenziz</li>
                     <li>> Empacotador</li>
-                    <li>> Servente de Pedreiro e Auxiliar de Pintor</li>
-                    <li>> Servente de Pedreiro e Auxiliar de Pintor</li> 
+                    <li>> Auxiliar de Pintor</li>
+                    <li>> Auxiliar de Pintor</li> 
                 </ol>
                 <p>CURSOS</p>
                 <table>
@@ -53,11 +55,12 @@
                 </table>
             </section>
             <br><br>
-            <!-- curiosidades ou hobbies -->
-            <aside>
-                <h3>Curiosidades e Hobbies</h3>
-            </aside>
         </main>
+        <!-- curiosidades ou hobbies -->
+        <aside align="left">
+            <h3>Curiosidades e Hobbies</h3>
+            <p>Eu gosto de programação, assistir anime, ler historia em quadrinhos, aprender inglês e escutar música.</p>
+        </aside>
         <pre>
 
 
@@ -88,9 +91,10 @@
 
         </pre>
         </main>
+        <!-- Rodápe -->
          <footer>
             <table>
-                <tr align="left">
+                <tr>
                     <th>Telefone </th>
                     <th>Email </th>
                     <th>Github </th>
